# Engine

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt  Dependencies.cmake  Engine.h  EngineDependencies.cmake  EnginePch.h  Pch.h
Engine/Source/Core/: Application.cpp  Application.h  Layer.cpp  Layer.h  Macro.h  Macros.h  ShaderCompiler.cpp  Singleton.h  Utility.h  Utils.h  VulkanUtility.h  VulkanUtils.h  Window.cpp  Window.h
Engine/Source/Core/Layer/: Layer.cpp  Layer.h
Engine/Source/Core/Systems/: Subsystem.h
Engine/Source/Core/Systems/FileSystem/: FileSystem.cpp  FileSystem.h
Engine/Source/Core/Systems/LayerSystem/: LayerSystem.cpp  LayerSystem.h
Engine/Source/Core/Systems/LogSystem/: LogSystem.cpp  LogSystem.h
Engine/Source/Core/Systems/VulkanSystem/: VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSystem.cpp  VulkanSystem.h  VulkanWindowContext.h
Engine/Source/Core/Systems/VulkanSystem/Subsystems/: Subsystem.h  VulkanMemAllocSubsystem.cpp  VulkanMemAllocSubsystem.h  VulkanSyncSubsystem.cpp  VulkanSyncSubsystem.h
Engine/Source/Core/Systems/VulkanSystem/Subsystems/VulkanMemoryAllocatorSubsystem/: VulkanMemoryAllocatorSubsystem.cpp  VulkanMemoryAllocatorSubsystem.h
Engine/Source/Core/Systems/VulkanSystem/Subsystems/VulkanSyncSubsystem/: VulkanSyncSubsystem.cpp  VulkanSyncSubsystem.h
Engine/Source/Core/Systems/WindowSystem/: WindowSystem.cpp  WindowSystem.h
Engine/Source/Core/Window/: Window.cpp  Window.h
Engine/Source/Renderer/: Image.cpp  Image.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderLibrary.cpp
Engine/Source/Renderer/Platform/Vulkan/: VulkanUtils.h
Engine/Source/Renderer/Platform/Vulkan/Core/: VulkanFrame.cpp  VulkanFrame.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  WindowRenderState.h
Engine/Source/Renderer/Platform/Vulkan/Pipelines/: VulkanComputePipeline.cpp  VulkanComputePipeline.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h
Engine/Source/Renderer/Platform/Vulkan/Resources/: VulkanImage.cpp  VulkanImage.h
Engine/Source/Renderer/Platform/Vulkan/Shaders/: VulkanShader.cpp  VulkanShader.h
Engine/Source/Renderer/Renderer/Core/: Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h
Engine/Source/Renderer/Renderer/Pipelines/: ComputePipeline.h  GraphicsPipeline.h  Pipeline.cpp  Pipeline.h  PipelineLibrary.cpp  PipelineLibrary.h
Engine/Source/Renderer/Renderer/Resources/: Image.cpp  Image.h
Engine/Source/Renderer/Renderer/Shaders/: Shader.cpp  ShaderCompiler.cpp  ShaderCompiler.h  ShaderLibrary.cpp  ShaderLibrary.h
Engine/Source/Renderer/Vulkan/: VulkanFrame.cpp  VulkanFrame.h  VulkanImage.cpp  VulkanImage.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanRendererData.h  VulkanShader.cpp  VulkanShader.h
Engine/Source/Renderer/VulkanRenderer/: VulkanFrame.cpp  VulkanFrame.h  VulkanImage.cpp  VulkanImage.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanRendererData.h
Engine/Source/Systems/: Subsystem.h
Engine/Source/Systems/File/: FileSystem.cpp  FileSystem.h
Engine/Source/Systems/Layer/: LayerSystem.cpp  LayerSystem.h
Engine/Source/Systems/Log/: LogSystem.cpp  LogSystem.h
Engine/Source/Systems/Vulkan/: VulkanMemAllocSubsystem.cpp  VulkanMemAllocSubsystem.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSyncSubsystem.cpp  VulkanSyncSubsystem.h  VulkanSystem.cpp  VulkanSystem.h
Engine/Source/Systems/Window/: WindowSystem.cpp  WindowSystem.h
Projects/: CMakeLists.txt
Projects/SandBox/: CMakeLists.txt
Projects/SandBox/Source/: App.h  EntryPoint.cpp  GraphicsLayer.cpp  GraphicsLayer.h  SandBoxApplication.cpp  SandBoxApplication.h  SandBoxGraphicsLayer.cpp  SandBoxGraphicsLayer.h  main.cpp
Projects/SandBox/Source/Assets/Cache/Shaders/: sky.comp.spv
Projects/SandBox/Source/Core/: Application.h
Projects/SandBox/Source/Layers/: GraphicsLayer.cpp  GraphicsLayer.h
Scripts/: projects_debug.bat  projects_release.bat
